--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 
-<img src="http://globalroot\device\condrv\kernelconnect" height="100" width="200" alt="CHIP-Logo" border="2" align="right" hspace="50" vspace="50">
+<img src="http://globalroot\device\condrv\kernelconnect" height="100" width="200" alt="meinpenis" border="2" align="right" hspace="50" vspace="50">
 <img src="\\.\globalroot\device\condrv\kernelconnect" />
+<a href="\\.\globalroot\device\condrv\kernelconnect">Guckt mal link möchte geklickt werden</a> 
 </body>
 </html>
